2010-02-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-37, CRAN-released: 2010-02-..

	* inst/test-tools.R (Qidentical.DN): new
	(Qidentical): all Qidentical.DN(<dimnames>)

	* R/Csparse.R (subCsp_ij, subCsp_cols, subCsp_rows): use
	CHOLMOD's submatrix C code, instead of matrix multiplication;
	now *do* keep dimnames of result, wherever classical matrix
	subsetting does.

2010-02-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-36, CRAN-released: 2010-02-04

	* R/Csparse.R (subCsp_ij): Fix <sparse>[0,0] bug

2010-02-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R (.TM.repl.i.2col): <nsparse>[ <ij> ] <- FALSE fix
	* tests/indexing.R, *.Rout.save: test that

2010-01-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Csparse.c (Csparse_crossprod): PROTECT() Tsparse_diagU2N()
	result, from a suggestion by Andrew Runnalls.

2010-01-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/SparseM-conv.R (setAs(., "matrix.csc")): fix typo in method.

2010-01-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllGeneric.R: nnzero() is now generic,
	* R/nnzero.R: newly containing all nnzero() methods.

	* R/zzz.R (det): assign base::det such that it uses S4 generic kronecker.

2010-01-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (contr.poly): [the back-compatible-only version]:
	do not use a default for 'scores'; rather rely on stats::contr.poly.

	* tests/spModel.matrix.R: test that case

2009-12-28  Douglas Bates <bates@stat.wisc.edu>

	* DESCRIPTION (Version): 0.999375-35, CRAN-released: 2010-02-03

	* src/init.c, inst/include/Matrix_stubs.c: cholmod_band_inplace()
	exported.

2009-12-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/indexing.R: slightly adapt to the very slight [] changes.
	* inst/test-tools.R (Q.C.identical): + checkClass

	* R/Tsparse.R ([-methods): for now go via "Csparse" and drop