@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-37
-Date: 2010-02-05
+Version: 0.999375-38
+Date: 2010-02-..
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
