@@ -26,7 +26,7 @@ export("Cholesky",
 ## no longer; implicit generics now
        ## "colMeans", "colSums", ## these needed a "..." added
        ## "rowMeans", "rowSums",
-##NOT_YET "det", # = a copy of base::det() but with Matrix namespace
+       "det",# << "identical" as base - but with correct determinant()
        "drop0",
        "expand",
        "expm",
@@ -283,8 +283,7 @@ if(getRversion() < "2.10.0")# The version of R -- at *install* time (!)
 if(getRversion() < "2.10.0")
     export("xtabs")
 
-if(getRversion() < "2.11.0" || R.version$`svn rev` < 51000)
-    ##                                               ----- FIXME exact number
+if(getRversion() < "2.11.0" || R.version$`svn rev` < 51018)
     export("norm")
 
 exportMethods("rbind2")
